C/production/JumpC/Jump_CSS/gtk.css
* {
  background-clip: padding-box;
  -GtkToolButton-icon-spacing: 4;
  -GtkTextView-error-underline-color: #FC4138;
  -GtkScrolledWindow-scrollbar-spacing: 0;
  -GtkToolItemGroup-expander-size: 11;
  -GtkWidget-text-handle-width: 20;
  -GtkWidget-text-handle-height: 20;
  -GtkDialog-button-spacing: 4;
  -GtkDialog-action-area-border: 6;
  outline-color: rgba(48, 48, 48, 0.3);
  outline-style: dashed;
  outline-offset: -3px;
  outline-width: 1px;
  -gtk-outline-radius: 2px;
}

.background {
  background-color: #a7a58d;
}

button {

  /*min-height: 122px;*/
  /* height of button */
  /*  xxx min-height: 22px; */

  /*min-width: 20px;*/
  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);

  border: 1.5px solid;
  /* border width */
  /* xxx   border: 1px solid; */

  border-radius: 6px;
  /* roundness of corners */
  /* xxx  border-radius: 3px; */

  /*padding: 115px 8px;*/

  color: #fdfdfd;
  /* green text */
  /* xxx  color: #303030; */

  outline-color: rgba(48, 48, 48, 0.3);

  border-color: #312929;
  /* blue border */
  /* xxx border-color: #BDBDBD; */

  /* xxx added line */
  /*background-image: radial-gradient(ellipse at center, yellow 20%, blue 80%); */
  /* see button active */

  background-color: rgb(180, 156, 89);
}


.box {
  background-color: rgb(204, 204, 204);
  border-color: #201d1d;
  border: 1.5px solid;
  /* border width */
  /* xxx   border: 1px solid; */

  border-radius: 6px;
}

*:disabled {
  -gtk-icon-effect: dim;
}



button:hover {
  color: #303030;
  outline-color: rgba(48, 48, 48, 0.3);
  border-color: #BDBDBD;
  background-color: white;
  -gtk-icon-effect: highlight;
}

button:active, button:checked {
  color: #ffffff;
  outline-color: rgba(255, 255, 255, 0.3);
  border-color: #BDBDBD;
  /* xxx */
  /* background-image: radial-gradient(ellipse at center, blue 20%, yellow 80%); */
  /* see button active */
  background-color: #92b372;
  background-clip: border-box;
  transition-duration: 50ms;
}

button:active:not(:disabled) label:disabled, button:checked:not(:disabled) label:disabled {
  color: inherit;
  opacity: 0.6;
}

button:active {
  color: #303030;
}

button:active:hover, button:checked {
  color: #ffffff;
}

button.flat:disabled, button.sidebar-button:disabled {
  border-color: transparent;
  background-color: transparent;
  background-image: none;
}

button:disabled {
  color: rgba(48, 48, 48, 0.55);
  border-color: rgba(189, 189, 189, 0.55);
  background-color: rgba(245, 245, 245, 0.55);
}

button:disabled label {
  color: inherit;
}

button:disabled:active, button:disabled:checked {
  color: rgba(255, 255, 255, 0.8);
  border-color: rgba(146, 179, 114, 0.75);
  background-color: rgba(146, 179, 114, 0.75);
  opacity: 0.6;
}

button:disabled:active label, button:disabled:checked label {
  color: inherit;
}


.gtkstyle-fallback {
  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);

  border: 1.5px solid;
  /* border width */
  /* xxx   border: 1px solid; */

  border-radius: 6px;
  /* roundness of corners */
  /* xxx  border-radius: 3px; */

  /*padding: 115px 8px;*/

  color: #fdfdfd;
  /* green text */
  /* xxx  color: #303030; */

  outline-color: rgba(48, 48, 48, 0.3);

  border-color: #312929;
  /* blue border */
  /* xxx border-color: #BDBDBD; */

  /* xxx added line */
  /*background-image: radial-gradient(ellipse at center, yellow 20%, blue 80%); */
  /* see button active */

  background-color: rgb(180, 156, 89);
}

.gtkstyle-fallback:hover {
  background-color: white;
  color: #303030;
}

.gtkstyle-fallback:active {
  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);

  border: 1.5px solid;
  /* border width */
  /* xxx   border: 1px solid; */

  border-radius: 6px;
  /* roundness of corners */
  /* xxx  border-radius: 3px; */

  /*padding: 115px 8px;*/

  color: #fdfdfd;
  /* green text */
  /* xxx  color: #303030; */

  outline-color: rgba(48, 48, 48, 0.3);

  border-color: #312929;
  /* blue border */
  /* xxx border-color: #BDBDBD; */

  /* xxx added line */
  /*background-image: radial-gradient(ellipse at center, yellow 20%, blue 80%); */
  /* see button active */

  background-color: rgb(180, 156, 89);
}

.gtkstyle-fallback:disabled {
  background-color: #f9f9f9;
  color: rgba(48, 48, 48, 0.55);
}

.gtkstyle-fallback:selected {
  background-color: #92b372;
  color: #ffffff;
}

